<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fon_suny" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"

        android:gravity="center"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/btbtbt"
        android:layout_marginTop="75dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/answer"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btbtbt"
        android:layout_width="160dp"
        android:layout_height="98dp"
        android:layout_below="@+id/userFild"
        android:layout_alignEnd="@+id/userFild"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="33dp"
        android:background="@color/cloud"
        android:contentDescription="@string/answer"
        android:scaleType="centerCrop"
        android:src="@drawable/cloud" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/userFild"
        android:layout_alignStart="@+id/btbtbt"
        android:layout_alignEnd="@+id/btbtbt"
        android:layout_marginStart="30dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/buttonw"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/userFild"
        android:layout_width="236dp"
        android:layout_height="55dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="85dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="src_atop"
        android:ems="20"
        android:fontFamily="monospace"
        android:hint="@string/userFild"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/b_cityadd"
        android:layout_width="181dp"
        android:layout_height="75dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="694dp"
        android:layout_marginEnd="114dp"
        android:backgroundTint="@color/grass"
        android:fontFamily="monospace"
        android:text="@string/city_add" />

    <ImageButton
        android:id="@+id/button_gps"
        android:layout_width="97dp"
        android:layout_height="97dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="245dp"
        android:background="@color/sky"
        android:contentDescription="@string/answer"
        android:scaleType="centerCrop"
        android:src="@drawable/geotochka" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignStart="@+id/button_gps"
        android:layout_alignEnd="@+id/button_gps"
        android:layout_marginStart="-21dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="-21dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/gpsknow" />


</RelativeLayout>